--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: 30px;
+    /* background-image: url('./img/weather-background.jpg');
+    
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh; */
+    font-family: "Montserrat", sans-serif;
+ 
+    
 }
 
+nav{
+    width: 90%;
+    height: 50px;
+    background-color: whitesmoke;
+    color: #3c657d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 10px 15px gray;
+}
 #weather-data{
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: 150px;
+  justify-content: space-between !important;
+  background-color: transparent;
+  background-image: url("./img/weather-bg-2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh; 
+  width: 90%;
+  height: calc(100vh - 150px);
+  padding-top: 10px;
+  font-size: 15px;
+}
+
+#main-data{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 5px;
+    
+    color: whitesmoke;
+    height: 50%;
+    width: 50%;
+    margin-top: -165px;
+    padding-left: 10px;
+    
+}
+#main-data > #temp {
+    font-size: 40px;
+}
+#main-data > #city_name{
+    font-size: 30px;
+}
+
+#other-data{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding-left: 10px;
+    color: whitesmoke;
+    
+    margin-top: -195px;
+    gap: 10px;
+    height: 40%;
+    width: 30%;
+
+    font-size: 25px;
+
+}
+
+#pressure #humidity #sea_level #grnd_level{
+    
+}
+.data-container{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-weight: 600;
+  /* border: 1px solid black; */
+
+  /* height: 50%;
+  width: 50%; */
+}
+
+#min-max-temp{
+    display: flex;
+    font-size: 20px;
+    gap: 10px;
 }
 
 .data-loading{
@@ -29,11 +112,11 @@ body{
     align-items: center;
     justify-content: center;
     
-    border: 4px solid #f3f3f3; /* Light grey */
-    border-top: 4px solid #3498db; /* Blue */
+    border: 15px solid #f3f3f3; /* Light grey */
+    border-top: 15px solid #3498db; /* Blue */
     border-radius: 50%;
-    width: 15px;
-    height: 15px;
+    width: 50px;
+    height: 50px;
     animation: spin 2s linear infinite;
 }
 
@@ -47,14 +130,17 @@ body{
     align-items: center;
     justify-content: center;
     gap: 2px;
-    height: 2rem;
+    height: 40px;
     width: 90%;
-    background-color: bisque;
+    background-color: rgb(128, 190, 244);
 }
+
 #search-city{
  
-    width: 60%;
+    width: 500px;
+    height: 20px;
     outline: none;
+    
     
 
 }
@@ -63,7 +149,8 @@ body{
     background-color: rgb(0, 176, 234);
     color: white;
     outline: none;
-    padding: 2px;
+    padding: 5px;
+    font-size: 15px;
     border-radius: 2px;
     box-shadow: 2px 2px black ;
 }
